changed social media icons' directory

--- a/codes/login.html
+++ b/codes/login.html
@@ -12,9 +12,9 @@
                     <button type="button" class="toggle-btn" onclick="register()">Register</button> 
                 </div>
                 <div class="social-icons">
-                    <img src="iconfinder_5282541_fb_social media_facebook_facebook logo_social network_icon_512px.png">
-                    <img src="iconfinder_5282551_tweet_twitter_twitter logo_icon_512px.png">
-                    <img src="iconfinder_5282548_play_player_video_youtube_youtuble logo_icon_512px.png">
+                    <img src="/social media icons/iconfinder_5282541_fb_social media_facebook_facebook logo_social network_icon_512px.png">
+                    <img src="/social media icons/iconfinder_5282548_play_player_video_youtube_youtuble logo_icon_512px.png">
+                    <img src="/social media icons/iconfinder_5282551_tweet_twitter_twitter logo_icon_512px.png">
                 </div>
                 <form id="login" class="input-group">
                     <input type="text" class="input-field" placeholder="Username" required>
